# trio-basic

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: main.yml
bytecode/: Cargo.toml
bytecode/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  machine.rs  process.rs  process_state.rs  value.rs
syntax/: Cargo.toml
syntax/src/: ast.rs  errors.rs  grammar.lalrpop  grammar.rs  lexer.rs  lib.rs  macros.rs  tokens.rs
trio-basic/: Cargo.toml
trio-basic/src/: diagnostics.rs  lib.rs  lowering.rs  parse.rs  session.rs  source_code.rs
