[package]
name = "runtime"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytecode = { path = "../bytecode" }
slog = "2.5.2"
thiserror = "1.0.4"
