[package]
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
build = "build.rs"
description = "Lexical and Syntactic analysis of TRIO Basic programs"
name = "syntax"
version = "0.1.0"
edition = "2018"
publish = false

[build-dependencies]
lalrpop = "0.17"

[dependencies]
lalrpop-util = "0.17"
regex = "1"
serde = "1"
serde_derive = "1"
codespan = { version = "0.5", features = ["serialization"] }

[dev-dependencies]
pretty_assertions = "0.6"
