[package]
name = "trio-basic"
version = "0.1.0"
authors = ["Michael Bryan <michaelfbryan@gmail.com>"]
edition = "2018"
description = "The TRIO Basic compiler"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan = "0.5.0"
codespan-reporting = "0.5.0"
slog = "2.5.2"
